[gd_scene load_steps=3 format=3 uid="uid://dpt3kpixawyby"]

[ext_resource type="Script" path="res://Scripts/scoreboard.gd" id="1_b5vdp"]
[ext_resource type="PackedScene" uid="uid://bhri8mqjbme2t" path="res://Scenes/UI/scoreboard_entry.tscn" id="2_uer0b"]

[node name="Scoreboard" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -125.0
offset_right = 157.5
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5vdp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="DummyEntry1" parent="VBoxContainer" instance=ExtResource("2_uer0b")]
layout_mode = 2

[node name="DummyEntry2" parent="VBoxContainer" instance=ExtResource("2_uer0b")]
layout_mode = 2

[node name="DummyEntry3" parent="VBoxContainer" instance=ExtResource("2_uer0b")]
layout_mode = 2
